<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="?android:attr/windowBackground"
    tools:context=".opciones.NosotrosFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">
            <TextView
                android:id="@+id/lblTituloMision"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="sans-serif-black"
                android:text="@string/stringTituloMision"
                android:textSize="24sp"
                android:textColor="?android:attr/textColor" />
            <TextView
                android:id="@+id/lblMision"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginBottom="30dp"
                android:fontFamily="sans-serif-black"
                android:text="@string/stringMision"
                android:textSize="16sp"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/lblTituloVision"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-black"
                android:text="@string/stringTituloVision"
                android:textSize="24sp"
                android:textColor="?android:attr/textColor" />
            <TextView
                android:id="@+id/lblVision"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginBottom="30dp"
                android:fontFamily="sans-serif-black"
                android:text="@string/stringVision"
                android:textSize="16sp"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/lblTituloUbicacion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-black"
                android:text="@string/stringTituloUbicacion"
                android:textSize="24sp"
                android:textColor="?android:attr/textColor" />

            <com.google.android.gms.maps.MapView
                android:id="@+id/mapView"
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:layout_marginBottom="40dp"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>