<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="?android:attr/windowBackground"
    tools:context=".acceso.RegistroActivity">

    <TextView
        android:id="@+id/lblTituloLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:text="@string/stringTituloRegistro"
        android:textSize="24sp"
        android:textColor="?android:attr/textColor" />

    <LinearLayout
        android:id="@+id/linearLayoutNombre"
        android:layout_width="274dp"
        android:layout_height="55dp"
        android:layout_marginTop="25dp"
        android:gravity="bottom|clip_horizontal"
        android:orientation="vertical" >

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/lyt_dtx_nombre"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="274dp"
            android:layout_height="55dp"
            android:textColorHint="?android:attr/textColorSecondary"
            app:hintTextColor="?android:attr/textColor"
            app:boxStrokeColor="@color/text_input_box_stroke" >

            <EditText
                android:id="@+id/edtNombre"
                android:layout_width="274dp"
                android:layout_height="55dp"
                android:hint="@string/stringNombre"
                android:inputType="textPersonName"
                android:textColor="?android:attr/textColorSecondary"
                tools:ignore="SpeakableTextPresentCheck" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutCorreo"
        android:layout_width="274dp"
        android:layout_height="55dp"
        android:layout_marginTop="25dp"
        android:gravity="bottom|clip_horizontal"
        android:orientation="vertical" >

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/lyt_dtx_correo"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="274dp"
            android:layout_height="55dp"
            android:textColorHint="?android:attr/textColorSecondary"
            app:hintTextColor="?android:attr/textColor"
            app:boxStrokeColor="@color/text_input_box_stroke" >

            <EditText
                android:id="@+id/edtCorreo"
                android:layout_width="274dp"
                android:layout_height="55dp"
                android:hint="@string/stringCorreo"
                android:inputType="textEmailAddress"
                android:textColor="?android:attr/textColorSecondary"
                tools:ignore="SpeakableTextPresentCheck" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutContrasena"
        android:layout_width="274dp"
        android:layout_height="55dp"
        android:layout_marginTop="15dp"
        android:gravity="bottom|clip_horizontal"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/lyt_dtx_contrasena"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="274dp"
            android:layout_height="55dp"
            android:textColorHint="?android:attr/textColorSecondary"
            app:hintTextColor="?android:attr/textColor"
            app:boxStrokeColor="@color/text_input_box_stroke" >

            <EditText
                android:id="@+id/edtContrasena"
                android:layout_width="274dp"
                android:layout_height="55dp"
                android:hint="@string/stringContrasena"
                android:inputType="textPassword"
                android:textColor="?android:attr/textColorSecondary"
                tools:ignore="SpeakableTextPresentCheck" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="15dp" >

        <LinearLayout
            android:id="@+id/linearLayoutPeso"
            android:layout_width="124dp"
            android:layout_height="55dp"
            android:gravity="bottom|clip_horizontal"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/lyt_dtx_peso"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="124dp"
                android:layout_height="55dp"
                android:textColorHint="?android:attr/textColorSecondary"
                app:hintTextColor="?android:attr/textColor"
                app:boxStrokeColor="@color/text_input_box_stroke" >

                <EditText
                    android:id="@+id/edtPeso"
                    android:layout_width="124dp"
                    android:layout_height="55dp"
                    android:hint="@string/stringPeso"
                    android:inputType="numberDecimal"
                    android:textColor="?android:attr/textColorSecondary"
                    tools:ignore="SpeakableTextPresentCheck" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayoutAltura"
            android:layout_width="124dp"
            android:layout_height="55dp"
            android:gravity="bottom|clip_horizontal"
            android:orientation="vertical"
            android:layout_marginLeft="15dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/lyt_dtx_altura"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="124dp"
                android:layout_height="55dp"
                android:textColorHint="?android:attr/textColorSecondary"
                app:hintTextColor="?android:attr/textColor"
                app:boxStrokeColor="@color/text_input_box_stroke" >

                <EditText
                    android:id="@+id/edtAltura"
                    android:layout_width="124dp"
                    android:layout_height="55dp"
                    android:hint="@string/stringAltura"
                    android:inputType="numberDecimal"
                    android:textColor="?android:attr/textColorSecondary"
                    tools:ignore="SpeakableTextPresentCheck" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutEdad"
        android:layout_width="124dp"
        android:layout_height="55dp"
        android:layout_marginTop="15dp"
        android:gravity="bottom|clip_horizontal"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/lyt_dtx_edad"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="124dp"
            android:layout_height="55dp"
            android:textColorHint="?android:attr/textColorSecondary"
            app:hintTextColor="?android:attr/textColor"
            app:boxStrokeColor="@color/text_input_box_stroke" >

            <EditText
                android:id="@+id/edtEdad"
                android:layout_width="124dp"
                android:layout_height="55dp"
                android:hint="@string/stringEdad"
                android:inputType="number"
                android:textColor="?android:attr/textColorSecondary"
                tools:ignore="SpeakableTextPresentCheck" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btnRegistrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/stringRegistrar"
        android:textSize="24sp"
        android:textStyle="bold"
        style="@style/AppTheme.LightBotones" />

    <TextView
        android:id="@+id/lblRegresar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:text="@string/stringRegresar"
        android:textColor="?android:attr/textColor" />

</LinearLayout>